add sqli-1 exercise

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,7 @@
               <ul role="listbox">
                 <li><a href="/search-safe">Search Safe</a></li>
                 <li><a href="/search-rXSS-1">Search rXSS 1</a></li>
+                <li><a href="/search-sqli-1">Search SQLi 1</a></li>
                 <li><a href="/ssti-1">SSTI 1</a></li>
                 <li><a href="/translate-xxe-1">Translate XXE 1</a></li>
               </ul>
